# proteus

./: .gitignore  CLAUDE.md  README.md  pixi.toml  pyproject.toml
.claude/: settings.local.json
.github/: pull_request_template.md
.github/workflows/: claude-review.yml
crates/proteus_hash/: Cargo.toml  pyproject.toml
crates/proteus_hash/proteus_hash/: __init__.py
crates/proteus_hash/src/: lib.rs
docs/: conf.py  index.rst
docs/_templates/autosummary/: module.rst
docs/api/: index.rst
notebooks/: dataloader.ipynb
projects/: CLAUDE.projects.md
proteus/: __init__.py
proteus/conf/: checkpoint.py  data.py  hydra.py  logger.py  losses.py  optim.py  register_configs.py  scheduler.py  training_params.py
proteus/data/: CLAUDE.data.md  __init__.py  constants.py  construct_registry.py  data_constants.py  data_loader.py  data_utils.py
proteus/data/downloads/: download_mpnn.py
proteus/losses/: training_loss.py
proteus/model/: __init__.py
proteus/model/model_utils/: __init__.py  mlp.py
proteus/model/tokenizer/: __init__.py
proteus/static/: __init__.py  constants.py
proteus/training/: logger.py  optim.py  scheduler.py  training_run.py
proteus/training/conf/: __init__.py  (+7 more)
proteus/types/: __init__.py
proteus/utils/: __init__.py  checkpoint_utils.py  masking.py  noise_utils.py  s3_utils.py  struct_utils.py  test_utils.py
scripts/: setup.sh  setup_env.sh
tests/: CLAUDE.testing.md
tests/data/: conftest.py  test_data_parsing.py  test_data_writing.py  test_dataloader.py
tests/wf_embed/: test_learn_aa.py  test_static_aa.py  wf_embed_common.py
(+41 files in other folders)
