[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "proteus"
version = "0.1.0"
description = "Multimodal protein generative model with Mixture of Queries"
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["."]
include = ["proteus*"]

[tool.pytest.ini_options]
markers = [
	"cpu: test runs on CPU only",
	"gpu: test requires a GPU",
]
