[package]
name = "proteus_hash"
version = "0.1.0"
edition = "2021"

[lib]
name = "proteus_hash"
crate-type = ["cdylib"]

# these versions must match python polars in pixi.toml (currently 1.38.*)
# see pola-rs/polars monorepo at the corresponding py-X.Y.Z tag for version mapping
[dependencies]
pyo3 = { version = "=0.26", features = ["extension-module", "abi3-py312"] }
pyo3-polars = { version = "=0.25", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
xxhash-rust = { version = "0.8", features = ["xxh64"] }
